# gen/restapi/operations/short_url/delete_short_url_responses.go
@@ -1,0 +1,129 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package short_url
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/Toha22BSK/UrlShortener/gen/models"
+)
+
+// DeleteShortURLOKCode is the HTTP code returned for type DeleteShortURLOK
+const DeleteShortURLOKCode int = 200
+
+/*
+DeleteShortURLOK no content
+
+swagger:response deleteShortUrlOK
+*/
+type DeleteShortURLOK struct {
+}
+
+// NewDeleteShortURLOK creates DeleteShortURLOK with default headers values
+func NewDeleteShortURLOK() *DeleteShortURLOK {
+
+	return &DeleteShortURLOK{}
+}
+
+// WriteResponse to the client
+func (o *DeleteShortURLOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// DeleteShortURLBadRequestCode is the HTTP code returned for type DeleteShortURLBadRequest
+const DeleteShortURLBadRequestCode int = 400
+
+/*
+DeleteShortURLBadRequest Invalid request
+
+swagger:response deleteShortUrlBadRequest
+*/
+type DeleteShortURLBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorV1 `json:"body,omitempty"`
+}
+
+// NewDeleteShortURLBadRequest creates DeleteShortURLBadRequest with default headers values
+func NewDeleteShortURLBadRequest() *DeleteShortURLBadRequest {
+
+	return &DeleteShortURLBadRequest{}
+}
+
+// WithPayload adds the payload to the delete short Url bad request response
+func (o *DeleteShortURLBadRequest) WithPayload(payload *models.ErrorV1) *DeleteShortURLBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete short Url bad request response
+func (o *DeleteShortURLBadRequest) SetPayload(payload *models.ErrorV1) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteShortURLBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// DeleteShortURLInternalServerErrorCode is the HTTP code returned for type DeleteShortURLInternalServerError
+const DeleteShortURLInternalServerErrorCode int = 500
+
+/*
+DeleteShortURLInternalServerError Internal Server Error
+
+swagger:response deleteShortUrlInternalServerError
+*/
+type DeleteShortURLInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorV1 `json:"body,omitempty"`
+}
+
+// NewDeleteShortURLInternalServerError creates DeleteShortURLInternalServerError with default headers values
+func NewDeleteShortURLInternalServerError() *DeleteShortURLInternalServerError {
+
+	return &DeleteShortURLInternalServerError{}
+}
+
+// WithPayload adds the payload to the delete short Url internal server error response
+func (o *DeleteShortURLInternalServerError) WithPayload(payload *models.ErrorV1) *DeleteShortURLInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete short Url internal server error response
+func (o *DeleteShortURLInternalServerError) SetPayload(payload *models.ErrorV1) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteShortURLInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
